added ability to add subject along with tasks and gave bootstrap look and feel

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,6 @@
 <ul class="nav">
 
-    <%= link_to "Vishwath's HW", root_path, :class => 'brand' %>
+  <%= link_to "Vishwath's HW", root_path, :class => 'brand' %>
+	<%= link_to "Add New Subject", new_subject_path %>
 
 </ul>
