--- a/app/views/tasks/_form_task.html.erb
+++ b/app/views/tasks/_form_task.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/errors', obj: @task %>
 
-<div class='well'>
+<div class='span7 well'>
   <%= form_for @task do |f| %>
     <div class='control-group'>
       <%= f.label :heading %>
@@ -14,6 +14,15 @@
       <%= f.label :description %>
       <%= f.text_area :description, rows: 5 %>
     </div>
-    <%= f.submit("Today's Homework" , class: 'btn btn-primary')%>
-  <% end %>
+
+  <div class='control-group'>
+    <%= f.collection_check_boxes :subject_id, Subject.all, :id, :subject do |sb| %>
+      <% sb.label(class: "checkbox inline") {sb.check_box(class: "checkbox") + sb.text} %>
+    <% end %>
+  </div>
+
+
+  <%= f.submit("Today's Homework" , class: 'btn btn-primary')%>
 </div>
+<% end %>
+
