--- a/app/views/tasks/_form_todo.html.erb
+++ b/app/views/tasks/_form_todo.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/errors', obj: @todo %>
 
-<div class='well'>
+<div class='span8 well'>
   <%= form_for @todo do |f| %>
     <div class='control-group'>
       <%= f.label :status %>
