--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,11 @@
 <ul class="nav">
 
   <%= link_to "Vishwath's HW", root_path, :class => 'brand' %>
-	<%= link_to "Add New Subject", new_subject_path %>
-
+  <% if logged_in? %>
+		<%= link_to "Add New Subject", new_subject_path %>
+		<%= link_to logout_path do %>
+          <i class='icon-circle-arrow-left'></i>
+          logout
+    <% end %>
+	<% end %>
 </ul>
