--- a/app/views/tasks/_form_todo.html.erb
+++ b/app/views/tasks/_form_todo.html.erb
@@ -3,13 +3,9 @@
 <div class='span8 well'>
   <%= form_for @todo do |f| %>
     <div class='control-group'>
-      <%= f.label :status %>
-      <%= f.text_field :status %>
-    </div>
-    <div class='control-group'>
-      <%= f.label :description %>
+      <%= f.label :description, "Add TODO task item" %>
       <%= f.text_area :description, rows: 2 %>
     </div>
-    <%= f.submit("Create Todo" , class: 'btn btn-primary')%>
+    <%= f.submit("Create 'Todo' Task" , class: 'btn btn-primary')%>
   <% end %>
 </div>
