--- a/app/views/tasks/_form_task.html.erb
+++ b/app/views/tasks/_form_task.html.erb
@@ -16,6 +16,15 @@
       <%= f.radio_button(:rating, 5) %> 5 
 
     </div>
+
+    <div>
+      <label for="amount">How well did he do? (5 being excellent)</label>
+      <input type="text" id="rating" readonly style="border:0; color:#f6931f; font-weight:bold; display:none">
+    </div>
+    <div id="slider-range-max"></div>
+
+
+
     <div class='control-group'>
       <%= f.label :description, "Describe what he learnt, any actions items, follow ups etc."%>
       <%= f.text_area :description, rows: 5 %>
