--- a/app/views/tasks/_form_todo.html.erb
+++ b/app/views/tasks/_form_todo.html.erb
@@ -3,7 +3,7 @@
 <div class='span3 well'>
   <%= form_for @todo do |f| %>
     <div class='control-group'>
-      <%= f.label :description, "Add TODO task item" %>
+      <%= f.label :description, "Todo's for Vishwath" %>
       <%= f.text_area :description, rows: 2 %>
     </div>
     <%= f.submit("Create 'Todo' Task" , class: 'btn btn-primary')%>
