Added kido images and links to class and maths sites

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,3 +42,15 @@ div.comment_votes {
   padding: 10px;
 }
 
+#ex1Slider .slider-selection {
+  background: #BABABA;
+}
+
+div.arrange {
+background: url('http://i.imgur.com/3GjQrX0.png') no-repeat center center fixed;
+-webkit-background-size: cover;
+-moz-background-size: cover;
+-o-background-size: cover;
+background-size: cover;
+padding-bottom: 40%;
+}
