--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,43 +1,47 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vishwath's Homework</title>
-    <meta name="description" content="">
-    <meta name="author" content="shankar-kargoo">
-    <%= stylesheet_link_tag "application", :media => "all" %>
-    <%= javascript_include_tag "application" %>
-    <%= csrf_meta_tags %>
-    
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
-    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
-    <link rel="stylesheet" href="http://jqueryui.com/jquery-wp-content/themes/jqueryui.com/style.css">
 
-    <%= yield(:head) %>
-  </head>
-  <body>
-    <header>
-      <div class="navbar">
-        <div class="navbar-inner">
-          <div class="container">
-            <%= render 'layouts/navigation' %>
+  <div class='arrange'>
+    <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Vishwath's Homework</title>
+      <meta name="description" content="">
+      <meta name="author" content="shankar-kargoo">
+      <%= stylesheet_link_tag "application", :media => "all" %>
+      <%= javascript_include_tag "application" %>
+      <%= csrf_meta_tags %>
+      
+      <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
+      <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+      <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
+      <link rel="stylesheet" href="http://jqueryui.com/jquery-wp-content/themes/jqueryui.com/style.css">
+
+      <%= yield(:head) %>
+    </head>
+
+    <body>
+      <header>
+        <div class="navbar">
+          <div class="navbar-inner">
+            <div class="container">
+              <%= render 'layouts/navigation' %>
+            </div>
           </div>
         </div>
-      </div>
-    </header>
-    <div id="main" role="main">
-      <div class="container">
-         <div class="row">
-          <div class="span12">
-            <%= render 'layouts/messages' %>
-            <%= yield %>
+      </header>
+      <div id="main" role="main">
+        <div class="container">
+           <div class="row">
+            <div class="span12">
+              <%= render 'layouts/messages' %>
+              <%= yield %>
+            </div>
           </div>
-        </div>
-        <footer>
-        </footer>
-      </div> <!--! end of .container -->
-    </div> <!--! end of #main -->
-  </body>
+          <footer>
+          </footer>
+        </div> <!--! end of .container -->
+      </div> <!--! end of #main -->
+    </body>
+  </div>
 </html>
